--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,34 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        android.buildFeatures.buildConfig true
+
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
+
+        ndk {
+            // Specify the ABIs that your application supports.
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "boolean", "SHOW_DEBUG_BUTTONS", "false"
+            signingConfig signingConfigs.debug
+        }
+
+        debug {
+            buildConfigField "boolean", "SHOW_DEBUG_BUTTONS", "true"
+            applicationIdSuffix ".debug"
+            resValue "string", "app_name", "Assistant Debug"
+            debuggable true
         }
     }
     compileOptions {
@@ -36,6 +58,15 @@ android {
         pickFirst 'lib/x86/libtensorflowlite_jni.so'
         pickFirst 'lib/x86_64/libtensorflowlite_jni.so'
     }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+        }
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -48,6 +79,9 @@ dependencies {
     implementation 'androidx.camera:camera-core:1.3.1'
     implementation 'androidx.camera:camera-camera2:1.3.1'
     implementation 'androidx.camera:camera-lifecycle:1.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.6.0'
+    implementation 'androidx.navigation:navigation-ui:2.6.0'
+    implementation 'androidx.activity:activity:1.8.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -57,6 +91,7 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:2.14.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.14.0'
     implementation 'org.tensorflow:tensorflow-lite-support:0.4.4'
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:2.14.0'
 
 //    implementation 'org.tensorflow:ndarray:0.4.0'
 //    implementation 'org.nd4j:nd4j-api:1.0.0-M2.1'
@@ -64,4 +99,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:multik-core:0.2.3"
     implementation "org.jetbrains.kotlinx:multik-kotlin:0.2.3"
+
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
